--- a/ecommerce_core/pom.xml
+++ b/ecommerce_core/pom.xml
@@ -8,19 +8,12 @@
         <groupId>com.xmeans.ecommerce</groupId>
         <artifactId>ecommerce_base</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>ecommerce_base</relativePath>
+        <relativePath>../ecommerce_base</relativePath>
     </parent>
 
     <groupId>com.xmeans.ecommerce</groupId>
-    <artifactId>ecommerce_2013</artifactId>
+    <artifactId>ecommerce_core</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
-    <modules>
-        <module>ecommerce</module>
-        <module>ecommerce_admin</module>
-        <module>ecommerce_web</module>
-        <module>ecommerce_core</module>
-    </modules>
-    
 </project>
